Corrected numerous style issues in the code.  Specifically, removing the px from lines 8 and 9, using lowercase for the color codes throughout the document.  Removed the background proprty from line 10.

--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,14 @@ body {
 
 canvas {
 		position: absolute;
-		top: 0px;
-		left: 0px;
-		background:;
+		top: 0;
+		left: 0;
 		}
 
 .score, .lives, .topscore {
 		position: absolute;
 		top: 5px;
-		color: #FF7F00;
+		color: #ff7f00;
 		font-family: Helvetica, sans-serif;
 		cursor: default;
 		display: none;
@@ -22,11 +21,11 @@ canvas {
 .game-over {
 		position: absolute;
 		top: 200px;
-		color: #FF7F00;
+		color: #ff7f00;
 		font-family: Helvetica, sans-serif;
 		font-size: 30px;
 		cursor: default;
-		display: none;		
+		display: none;
 }
 
 .game-over span {
