--- a/css/style.css
+++ b/css/style.css
@@ -4,40 +4,15 @@ body {
 }
 
 canvas {
-<<<<<<< HEAD
-		position: absolute;
-		top: 0;
-		left: 0;
-		}
-
-.score, .lives, .topscore {
-		position: absolute;
-		top: 5px;
-		color: #ff7f00;
-		font-family: Helvetica, sans-serif;
-		cursor: default;
-		display: none;
-}
-
-.game-over {
-		position: absolute;
-		top: 200px;
-		color: #ff7f00;
-		font-family: Helvetica, sans-serif;
-		font-size: 30px;
-		cursor: default;
-		display: none;
-=======
     position: absolute;
-    top: 0px;
-    left: 0px;
-    background:;
+    top: 0;
+    left: 0;
 }
 
 .score, .lives, .topscore {
     position: absolute;
     top: 5px;
-    color: #FF7F00;
+    color: #ff7f00;
     font-family: Helvetica, sans-serif;
     cursor: default;
     display: none;
@@ -46,12 +21,11 @@ canvas {
 .game-over {
     position: absolute;
     top: 200px;
-    color: #FF7F00;
+    color: #ff7f00;
     font-family: Helvetica, sans-serif;
     font-size: 30px;
     cursor: default;
     display: none;
->>>>>>> b7ed203f9efbafeacdf2d854b30deb4ce9c390a3
 }
 
 .game-over span {
@@ -61,14 +35,14 @@ canvas {
 }
 
 .game-over span:hover {
-    color: #FFD700;
+    color: #ffd700;
 }
 
 .loading {
     position: absolute;
     top: 100px;
     left: 210px;
-    color: #FF7F00;
+    color: #ff7f00;
     font-family: Helvetica, sans-serif;
     font-size: 30px;
     cursor: default;
