--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,9 @@ body {
 }
 
 canvas {
-    position: absolute;
+/*    position: absolute;
     top: 0;
-    left: 0;
+    left: 0;*/
 }
 
 .score, .lives, .topscore {
