--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ canvas {
     top: 200px;
     color: #ff7f00;
     font-family: Helvetica, sans-serif;
-    font-size: 30px;
+    font-size: 5vh;
     cursor: default;
     display: none;
     text-align: center;
@@ -40,7 +40,7 @@ canvas {
 }
 
 .game-over span {
-    font-size: 20px;
+    font-size: 4vh;
     cursor: pointer;
     position: relative;
 }
@@ -52,7 +52,7 @@ canvas {
 .loading {
     position: absolute;
     top: 100px;
-    left: 210px;
+/*    left: 210px;*/
     color: #ff7f00;
     font-family: Helvetica, sans-serif;
     font-size: 30px;
