Add sound features for mobile devices (try intregrating SoundManager2).  Adjust buffertop of controller canvas (was being cut off on Galaxy Note 5 device).   Add additional sound formats (vs. just having .wav).

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@ canvas {
     position: absolute;
 }
 
+#canvas-game {
+    z-index: 0;
+}
+
 .score, .lives, .topscore {
     position: absolute;
     top: 5px;
