--- a/css/style.css
+++ b/css/style.css
@@ -27,143 +27,97 @@ canvas {
     z-index: 0;
 }
 
-
+.controller btn {
+  text-align: center;
+  position: absolute;
+  z-index: 2;
+  border-radius: 60px;
+  -webkit-border-radius: 60;
+  -moz-border-radius: 60;
+  font-family: Courier New;
+  color: #ffffff;
+  padding: 10px 15px 10px 15px;
+  text-decoration: none;
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;      /* IE 10+ */
+  user-select: none;
+  font-size: 5vh;
+  line-height: 5vh;
+}
 
 .btn-up {
-        text-align: center;
-    position: absolute;
-    top: 72vh;
-    left: 45vw;
-    z-index: 2;
-    height: 5vh;
-    width: 6vw;
-
-
+  top: 72vh;
+  left: 42vw;
+  height: 5vh;
+  width: 6vw;
   background: #d9d63b;
   background-image: -webkit-linear-gradient(top, #d9d63b, #e8e10e);
   background-image: -moz-linear-gradient(top, #d9d63b, #e8e10e);
   background-image: -ms-linear-gradient(top, #d9d63b, #e8e10e);
   background-image: -o-linear-gradient(top, #d9d63b, #e8e10e);
   background-image: linear-gradient(to bottom, #d9d63b, #e8e10e);
-  -webkit-border-radius: 60;
-  -moz-border-radius: 60;
-  border-radius: 60px;
-  font-family: Courier New;
-  color: #ffffff;
-  font-size: 5vh;
-  padding: 10px 15px 10px 15px;
-  text-decoration: none;
-    -webkit-user-select: none;  /* Chrome all / Safari all */
-  -moz-user-select: none;     /* Firefox all */
-  -ms-user-select: none;      /* IE 10+ */
-  user-select: none;
+
 }
 
 .btn-up:active {
   background: #BDB600;
-  text-decoration: none;
 }
 
 .btn-left {
-    text-align: center;
-    position: absolute;
-    top: 78vh;
-    left: 30vw;
-    z-index: 2;
-    height: 5vh;
-    width: 6vw;
 
-
+  top: 78vh;
+  left: 27vw;
+  z-index: 2;
+  height: 5vh;
+  width: 6vw;
   background: #7cb6c4;
   background-image: -webkit-linear-gradient(top, #7cb6c4, #105a78);
   background-image: -moz-linear-gradient(top, #7cb6c4, #105a78);
   background-image: -ms-linear-gradient(top, #7cb6c4, #105a78);
   background-image: -o-linear-gradient(top, #7cb6c4, #105a78);
   background-image: linear-gradient(to bottom, #7cb6c4, #105a78);
-  -webkit-border-radius: 60;
-  -moz-border-radius: 60;
-  border-radius: 60px;
-  font-family: Courier New;
-  color: #ffffff;
-  font-size: 5vh;
-  padding: 10px 15px 10px 15px;
-  text-decoration: none;
-    -webkit-user-select: none;  /* Chrome all / Safari all */
-  -moz-user-select: none;     /* Firefox all */
-  -ms-user-select: none;      /* IE 10+ */
-  user-select: none;
 }
 
 .btn-left:active {
   background: #0A4861;
-  text-decoration: none;
 }
 
 .btn-down {
-    text-align: center;
-    position: absolute;
-    top: 84vh;
-    left: 45vw;
-    z-index: 2;
-    height: 5vh;
-    width: 6vw;
 
+  top: 84vh;
+  left: 42vw;
+  z-index: 2;
+  height: 5vh;
+  width: 6vw;
   background: #1dc924;
   background-image: -webkit-linear-gradient(top, #1dc924, #107814);
   background-image: -moz-linear-gradient(top, #1dc924, #107814);
   background-image: -ms-linear-gradient(top, #1dc924, #107814);
   background-image: -o-linear-gradient(top, #1dc924, #107814);
   background-image: linear-gradient(to bottom, #1dc924, #107814);
-  -webkit-border-radius: 60;
-  -moz-border-radius: 60;
-  border-radius: 60px;
-  font-family: Courier New;
-  color: #ffffff;
-  font-size: 5vh;
-  padding: 10px 15px 10px 15px;
-  text-decoration: none;
-    -webkit-user-select: none;  /* Chrome all / Safari all */
-  -moz-user-select: none;     /* Firefox all */
-  -ms-user-select: none;      /* IE 10+ */
-  user-select: none;
 }
 
 .btn-down:active {
   background: #085C0B;
-  text-decoration: none;
 }
 
 .btn-right {
-    text-align: center;
-    position: absolute;
-    top: 78vh;
-    left: 60vw;
-    z-index: 2;
-    height: 5vh;
-    width: 6vw;
+  top: 78vh;
+  left: 57vw;
+  z-index: 2;
+  height: 5vh;
+  width: 6vw;
   background: #a52222;
   background-image: -webkit-linear-gradient(top, #a52222, #520101);
   background-image: -moz-linear-gradient(top, #a52222, #520101);
   background-image: -ms-linear-gradient(top, #a52222, #520101);
   background-image: -o-linear-gradient(top, #a52222, #520101);
   background-image: linear-gradient(to bottom, #a52222, #520101);
-  -webkit-border-radius: 60;
-  -moz-border-radius: 60;
-  border-radius: 60px;
-  font-family: Courier New;
-  color: #ffffff;
-  font-size: 5vh;
-  padding: 10px 15px 10px 15px;
-  text-decoration: none;
-    -webkit-user-select: none;  /* Chrome all / Safari all */
-  -moz-user-select: none;     /* Firefox all */
-  -ms-user-select: none;      /* IE 10+ */
-  user-select: none;
 }
 
 .btn-right:active {
   background: #330000;
-  text-decoration: none;
 }
 
 
@@ -207,6 +161,162 @@ canvas {
     font-family: Helvetica, sans-serif;
     font-size: 30px;
     cursor: default;
+}
+
+/* ----------- iPhone 5 and 5S ----------- */
+
+
+/* Landscape */
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) {
+   /* -31 top +30 left*/
+
+    .controller btn {
+      padding: 12px 15px 12px 15px;
+      font-size: 5vw;
+      width: 2.3vw;
+      height: 6vh;
+      line-height: 6vh;
+
+    }
+    .btn-up {
+      top: 37vh;
+      left: 72vw;
+
+
+    }
+    .btn-left {
+      top: 47vh;
+      left: 64vw;
+
+    }
+    .btn-right {
+      top: 47vh;
+      left: 80vw;
+
+    }
+    .btn-down {
+      top: 56vh;
+      left: 72vw;
+
+    }
+
+}
+
+/* ----------- iPhone 6 ----------- */
+
+/* Portrait and Landscape */
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+}
+
+/* Portrait */
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+    .btn-up {
+      top: 72vh;
+      left: 43vw;
+    }
+    .btn-left {
+      top: 78vh;
+      left: 28vw;
+    }
+
+    .btn-down {
+      top: 84vh;
+      left: 43vw;
+    }
+
+    .btn-right {
+      top: 78vh;
+      left: 58vw;
+    }
+
+}
+
+/* Landscape */
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) {
+
+    .controller btn {
+      padding: 12px 15px 12px 15px;
+      font-size: 5vw;
+      width: 3.3vw;
+      height: 7vh;
+      line-height: 7vh;
+
+    }
+    .btn-up {
+      top: 37vh;
+      left: 72vw;
+
+
+    }
+    .btn-left {
+      top: 47vh;
+      left: 64vw;
+
+    }
+    .btn-right {
+      top: 47vh;
+      left: 80vw;
+
+    }
+    .btn-down {
+      top: 56vh;
+      left: 72vw;
+
+    }
+
+}
+
+@media only screen
+  and (min-device-width: 412px)
+  and (max-device-width: 732px)
+  and (orientation: landscape) {
+
+    .controller btn {
+      padding: 12px 15px 12px 15px;
+      font-size: 5vw;
+      width: 3.3vw;
+      height: 7vh;
+      line-height: 7vh;
+
+    }
+    .btn-up {
+      top: 37vh;
+      left: 72vw;
+
+
+    }
+    .btn-left {
+      top: 47vh;
+      left: 64vw;
+
+    }
+    .btn-right {
+      top: 47vh;
+      left: 80vw;
+
+    }
+    .btn-down {
+      top: 56vh;
+      left: 72vw;
+
+    }
+
 }
 
 @media screen and (min-width: 1440px) {
