Change custom CSS device query to iPhone 6 plus. Add CSS effect to start-game div of html

--- a/css/style.css
+++ b/css/style.css
@@ -134,13 +134,27 @@ canvas {
 .game-over {
     position: absolute;
     top: 200px;
-    color: #ff7f00;
-    font-family: Helvetica, sans-serif;
+/*    color: #ff7f00;
+    font-family: Helvetica, sans-serif;*/
     font-size: 5vh;
     cursor: default;
     display: none;
     text-align: center;
     z-index: 2;
+
+  color: #fff;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #66CC00, 0 0 30px #66CC00, 0 0 40px #66CC00, 0 0 50px #66CC00, 0 0 75px #66CC00;
+/*  letter-spacing: 5px;*/
+  font: 'MisoRegular';
+}
+
+@-webkit-keyframes neon1 {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #FF1177, 0 0 70px #FF1177, 0 0 80px #FF1177, 0 0 100px #FF1177, 0 0 150px #FF1177;
+  }
+  to {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #FF1177, 0 0 35px #FF1177, 0 0 40px #FF1177, 0 0 50px #FF1177, 0 0 75px #FF1177;
+  }
 }
 
 .game-over span {
@@ -283,8 +297,9 @@ canvas {
 }
 
 @media only screen
-  and (min-device-width: 412px)
-  and (max-device-width: 732px)
+  and (min-device-width: 414px)
+  and (max-device-width: 736px)
+  and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: landscape) {
 
     .controller btn {
